feat: remove put endpoint and create download endpoint
